--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/qr-scanner": "^5.31.1",
     "@ionic-native/social-sharing": "^5.31.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -42,6 +43,7 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "cordova-plugin-nativestorage": "^2.3.2",
+    "cordova-plugin-qrscanner": "^3.0.1",
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "cordova-sqlite-storage": "^5.1.0",
     "jasmine-core": "~3.5.0",
@@ -61,7 +63,8 @@
     "plugins": {
       "cordova-plugin-nativestorage": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-x-socialsharing": {}
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-qrscanner": {}
     }
   }
 }
