--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
     "chart.js": "^2.9.4",
+    "cordova-ios": "6.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -42,10 +43,18 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cordova-plugin-add-swift-support": "^2.0.2",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-qrscanner": "^3.0.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "cordova-sqlite-storage": "^5.1.0",
+    "es6-promise-plugin": "^4.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -64,7 +73,16 @@
       "cordova-plugin-nativestorage": {},
       "cordova-sqlite-storage": {},
       "cordova-plugin-x-socialsharing": {},
-      "cordova-plugin-qrscanner": {}
-    }
+      "cordova-plugin-qrscanner": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "ios"
+    ]
   }
 }
