--- a/package.json
+++ b/package.json
@@ -19,25 +19,20 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
-    "@auth0/cordova": "^0.4.3",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/qr-scanner": "^5.31.1",
-    "@ionic-native/safari-view-controller": "^5.31.1",
     "@ionic-native/social-sharing": "^5.31.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
-    "auth0-js": "^9.14.3",
     "chart.js": "^2.9.4",
-    "crypto-browserify": "^3.12.0",
+    "cordova-ios": "6.2.0",
     "rxjs": "~6.5.5",
-    "stream": "0.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^11.0.0",
     "@angular-devkit/build-angular": "~0.1000.0",
     "@angular/cli": "~10.0.5",
     "@angular/compiler": "~10.0.0",
@@ -48,18 +43,12 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "cordova-android": "^9.0.0",
-    "cordova-ios": "^6.2.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
-    "cordova-plugin-androidx": "^3.0.0",
-    "cordova-plugin-androidx-adapter": "^1.1.3",
-    "cordova-plugin-customurlscheme": "^5.0.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-qrscanner": "^3.0.1",
-    "cordova-plugin-safariviewcontroller": "^1.6.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -89,22 +78,10 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-safariviewcontroller": {},
-      "cordova-plugin-customurlscheme": {
-        "URL_SCHEME": "io.gcm",
-        "ANDROID_SCHEME": "io.gcm",
-        "ANDROID_HOST": "gcm.eu.auth0.com",
-        "ANDROID_PATHPREFIX": "/cordova/io.gcm/callback"
-      },
-      "cordova-plugin-androidx": {},
-      "cordova-plugin-androidx-adapter": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android",
       "ios"
     ]
   }
