--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
     "chart.js": "^2.9.4",
-    "cordova-ios": "6.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -43,6 +42,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cordova-ios": "^6.2.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
